--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,8 @@
   "description": "製菓衛生師試験の過去問を学習できるクイズアプリです。",
   "start_url": ".",
   "display": "standalone",
+  "background_color": "#f0f2f5",
+  "theme_color": "#f0f2f5",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
